/*
 * Copyright 2025 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax="proto3";
package com.google.cloud.aiplatform.fs;

import "google/cloud/aiplatform/v1beta1/featurestore_online_service.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option java_package = "com.google.cloud.aiplatform.fs";
option java_multiple_files = true;

message FeatureViewInternalStorage {
  message FeatureData {
    string name = 1;

    repeated .google.cloud.aiplatform.v1beta1.FeatureValue values = 2;
  }

  repeated FeatureData feature_data = 1;

  .google.protobuf.Timestamp feature_timestamp = 2;
}


// Proto that wraps internal storage and its metadata that're stored in one
// online storage cell, either in Cloud Bigtable or Lightning.
message FeatureViewCell {
  // Internal feature data in storage.
  FeatureViewInternalStorage internal_storage = 1;

  // The timestamp when data is written to online store, in milliseconds.
  int64 timestamp_ms = 2;

  // String key associated with the cell. Populated for
  // StreamingFetchFeatureValues.
  string string_key = 3;
}
